MulticastSocket getOption(IP_MULTICAST_IF) returns interface when not set

XMLWordPrintable

    • b26
    • Verified

      The IP_MULTICAST_IF socket option is specified to have an initial value of null to mean that the interface has not been set. When the interface is not set MulticastSocket's getOption(IP_MULTICAST_IF) returns a NetworkInterface that appears to be valid (index >= 0) but is useless.

      The setOption/getOption methods are @since 9 so the compatibility impact of fixing this is probably low.

            Assignee:
            Patrick Concannon (Inactive)
            Reporter:
            Alan Bateman
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: