8233307: MulticastSocket getOption(IP_MULTICAST_IF) returns interface when not set

The MulticastSocket method getOption has been changed to conform to the behavior described in StandardSocketOptions.IP_MULTICAST_IF.

Reviewed-by: chegar, dfuchs